--- a/QuickEditForm/QuickEditForm/strings/QuickEditForm.1049.resx
+++ b/QuickEditForm/QuickEditForm/strings/QuickEditForm.1049.resx
@@ -59,33 +59,33 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 </resheader>
 <data name="ReadOnlyRecordMessage" xml:space="preserve">
-    <value>The record is in read only mode.</value>
+    <value>Запись доступна в режиме только для чтения.</value>
 </data>
 <data name="MissingPrivilegeOnEntityMessage" xml:space="preserve">
-    <value>You do not have the privileges to see the record.</value>
+    <value>У вас недостаточно привилегий для просмотра этой записи.</value>
 </data>
 <data name="MissingPrivilegeOnRecordMessage" xml:space="preserve">
-    <value>You are missing privileges over the record in order to update it.</value>
+    <value>У вас нет привилегий на запись, чтобы их можно было обновить.</value>
 </data>
 <data name="UpdateErrorMessage" xml:space="preserve">
-    <value>An error occurred during the update.</value>
+    <value>Во время обновления произошла ошибка.</value>
 </data>
 <data name="UpdateSuccessMessage" xml:space="preserve">
-    <value>The record was updated successfully!</value>
+    <value>Запись успешно обновлена!</value>
 </data>
 <data name="LookupFieldHasNoValue" xml:space="preserve">
-    <value>Fill the field {0} to see its details.</value>
+    <value>Для просмотра подробных сведений введите {0} поля.</value>
 </data>
 <data name="SaveButtonLabel" xml:space="preserve">
-    <value>Save</value>
+    <value>Сэкономить</value>
 </data>
 <data name="RefreshButtonLabel" xml:space="preserve">
-    <value>Refresh</value>
+    <value>Частота</value>
 </data>
 <data name="QuickFormIdNotFound" xml:space="preserve">
-    <value>The Quick View Form Id doesn't exist. Please modify it.</value>
+    <value>Идентификатор формы быстрого представления не существует. Измените его.</value>
 </data>
 <data name="SelectOptionDropdown" xml:space="preserve">
-    <value>--Select--</value>
+    <value>--Выберите--</value>
 </data>
 </root>
