--- a/QuickEditForm/QuickEditForm/strings/QuickEditForm.1040.resx
+++ b/QuickEditForm/QuickEditForm/strings/QuickEditForm.1040.resx
@@ -59,33 +59,33 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 </resheader>
 <data name="ReadOnlyRecordMessage" xml:space="preserve">
-    <value>The record is in read only mode.</value>
+    <value>Il record è in modalità di sola lettura.</value>
 </data>
 <data name="MissingPrivilegeOnEntityMessage" xml:space="preserve">
-    <value>You do not have the privileges to see the record.</value>
+    <value>Non disponi dei privilegi per visualizzare il record.</value>
 </data>
 <data name="MissingPrivilegeOnRecordMessage" xml:space="preserve">
-    <value>You are missing privileges over the record in order to update it.</value>
+    <value>Privilegi mancanti per il record per aggiornarlo.</value>
 </data>
 <data name="UpdateErrorMessage" xml:space="preserve">
-    <value>An error occurred during the update.</value>
+    <value>Si è verificato un errore durante l'aggiornamento.</value>
 </data>
 <data name="UpdateSuccessMessage" xml:space="preserve">
-    <value>The record was updated successfully!</value>
+    <value>Il record è stato aggiornato correttamente!</value>
 </data>
 <data name="LookupFieldHasNoValue" xml:space="preserve">
-    <value>Fill the field {0} to see its details.</value>
+    <value>Compila il campo {0} per visualizzare i dettagli.</value>
 </data>
 <data name="SaveButtonLabel" xml:space="preserve">
-    <value>Save</value>
+    <value>Salvare</value>
 </data>
 <data name="RefreshButtonLabel" xml:space="preserve">
-    <value>Refresh</value>
+    <value>Aggiorna</value>
 </data>
 <data name="QuickFormIdNotFound" xml:space="preserve">
-    <value>The Quick View Form Id doesn't exist. Please modify it.</value>
+    <value>L'ID modulo di visualizzazione rapida non esiste. Modificarla.</value>
 </data>
 <data name="SelectOptionDropdown" xml:space="preserve">
-    <value>--Select--</value>
+    <value>--Seleziona--</value>
 </data>
 </root>
