--- a/QuickEditForm/QuickEditForm/strings/QuickEditForm.3082.resx
+++ b/QuickEditForm/QuickEditForm/strings/QuickEditForm.3082.resx
@@ -59,33 +59,33 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 </resheader>
 <data name="ReadOnlyRecordMessage" xml:space="preserve">
-    <value>The record is in read only mode.</value>
+    <value>El registro está en modo de solo lectura.</value>
 </data>
 <data name="MissingPrivilegeOnEntityMessage" xml:space="preserve">
-    <value>You do not have the privileges to see the record.</value>
+    <value>No tiene los privilegios necesarios para ver el registro.</value>
 </data>
 <data name="MissingPrivilegeOnRecordMessage" xml:space="preserve">
-    <value>You are missing privileges over the record in order to update it.</value>
+    <value>Faltan privilegios sobre el registro para poder actualizarlo.</value>
 </data>
 <data name="UpdateErrorMessage" xml:space="preserve">
-    <value>An error occurred during the update.</value>
+    <value>Se ha producido un error durante la actualización.</value>
 </data>
 <data name="UpdateSuccessMessage" xml:space="preserve">
-    <value>The record was updated successfully!</value>
+    <value>El registro se actualizó correctamente!</value>
 </data>
 <data name="LookupFieldHasNoValue" xml:space="preserve">
-    <value>Fill the field {0} to see its details.</value>
+    <value>Rellene el campo {0} para ver los detalles.</value>
 </data>
 <data name="SaveButtonLabel" xml:space="preserve">
-    <value>Save</value>
+    <value>Guardar</value>
 </data>
 <data name="RefreshButtonLabel" xml:space="preserve">
-    <value>Refresh</value>
+    <value>Actualizar</value>
 </data>
 <data name="QuickFormIdNotFound" xml:space="preserve">
-    <value>The Quick View Form Id doesn't exist. Please modify it.</value>
+    <value>El ID. del formulario de vista rápida no existe. Modifíquelo.</value>
 </data>
 <data name="SelectOptionDropdown" xml:space="preserve">
-    <value>--Select--</value>
+    <value>--Seleccionar--</value>
 </data>
 </root>
