--- a/AnyCompositeFields/AnyCompositeFIelds/strings/AnyCompositeFIelds.1036.resx
+++ b/AnyCompositeFields/AnyCompositeFIelds/strings/AnyCompositeFIelds.1036.resx
@@ -58,7 +58,7 @@
 <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 </resheader>
-<data name="doneLabel" xml:space="preserve">
+<data name="Done" xml:space="preserve">
     <value>Terminé</value>
 </data>
 </root>
