--- a/AnyCompositeFields/AnyCompositeFIelds/strings/AnyCompositeFIelds.1043.resx
+++ b/AnyCompositeFields/AnyCompositeFIelds/strings/AnyCompositeFIelds.1043.resx
@@ -59,6 +59,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 </resheader>
 <data name="Done" xml:space="preserve">
-    <value>Done</value>
+    <value>Gereed</value>
 </data>
 </root>
