adding info about required fields and prevent save if any not filled

--- a/QuickEditForm/QuickEditForm/strings/QuickEditForm.1035.resx
+++ b/QuickEditForm/QuickEditForm/strings/QuickEditForm.1035.resx
@@ -88,4 +88,7 @@
 <data name="SelectOptionDropdown" xml:space="preserve">
     <value>--Select--</value>
 </data>
+<data name="EmptyRequiredFields" xml:space="preserve">
+    <value>Ainakin yhtä pakollista kenttää ei ole täytetty.</value>
+</data>
 </root>
