--- a/QuickEditForm/QuickEditForm/strings/QuickEditForm.1030.resx
+++ b/QuickEditForm/QuickEditForm/strings/QuickEditForm.1030.resx
@@ -88,4 +88,7 @@
 <data name="SelectOptionDropdown" xml:space="preserve">
     <value>--Vælg--</value>
 </data>
+<data name="EmptyRequiredFields" xml:space="preserve">
+    <value>Mindst et påkrævet felt er ikke udfyldt.</value>
+</data>
 </root>
