--- a/QuickEditForm/QuickEditForm/strings/QuickEditForm.1031.resx
+++ b/QuickEditForm/QuickEditForm/strings/QuickEditForm.1031.resx
@@ -88,4 +88,7 @@
 <data name="SelectOptionDropdown" xml:space="preserve">
     <value>--Auswählen--</value>
 </data>
+<data name="EmptyRequiredFields" xml:space="preserve">
+    <value>Mindestens ein Pflichtfeld ist nicht ausgefüllt.</value>
+</data>
 </root>
