--- a/QuickEditForm/QuickEditForm/strings/QuickEditForm.1033.resx
+++ b/QuickEditForm/QuickEditForm/strings/QuickEditForm.1033.resx
@@ -88,4 +88,7 @@
 <data name="SelectOptionDropdown" xml:space="preserve">
     <value>--Select--</value>
 </data>
+<data name="EmptyRequiredFields" xml:space="preserve">
+    <value>At least one required field is not filled.</value>
+</data>
 </root>
