--- a/QuickEditForm/QuickEditForm/strings/QuickEditForm.1037.resx
+++ b/QuickEditForm/QuickEditForm/strings/QuickEditForm.1037.resx
@@ -88,4 +88,7 @@
   <data name="SelectOptionDropdown" xml:space="preserve">
     <value>--בחר--</value>
   </data>
+  <data name="EmptyRequiredFields" xml:space="preserve">
+    <value>שדה חובה אחד לפחות לא מלא.</value>
+</data>
 </root>
