--- a/QuickEditForm/QuickEditForm/strings/QuickEditForm.1040.resx
+++ b/QuickEditForm/QuickEditForm/strings/QuickEditForm.1040.resx
@@ -88,4 +88,7 @@
 <data name="SelectOptionDropdown" xml:space="preserve">
     <value>--Seleziona--</value>
 </data>
+<data name="EmptyRequiredFields" xml:space="preserve">
+    <value>Almeno un campo obbligatorio non è compilato.</value>
+</data>
 </root>
