--- a/QuickEditForm/QuickEditForm/strings/QuickEditForm.1044.resx
+++ b/QuickEditForm/QuickEditForm/strings/QuickEditForm.1044.resx
@@ -88,4 +88,7 @@
 <data name="SelectOptionDropdown" xml:space="preserve">
     <value>--Velg--</value>
 </data>
+<data name="EmptyRequiredFields" xml:space="preserve">
+    <value>Minst ett obligatorisk felt er ikke fylt ut.</value>
+</data>
 </root>
