--- a/QuickEditForm/QuickEditForm/strings/QuickEditForm.1058.resx
+++ b/QuickEditForm/QuickEditForm/strings/QuickEditForm.1058.resx
@@ -88,4 +88,7 @@
 <data name="SelectOptionDropdown" xml:space="preserve">
     <value>--Select--</value>
 </data>
+<data name="EmptyRequiredFields" xml:space="preserve">
+    <value>Принаймні одне обов'язкове поле не заповнено.</value>
+</data>
 </root>
